objects/User_Book_Mark__c.object
<CustomObject>
    <description>Created By :- Veeresh Alur
Date: 27-Feb-14
Capability: ES Social Learning Platform
Release: 2
Description: User Book Mark</description>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Book_Marks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Book Mark</label>
    <nameField>
        <displayFormat>UBM-{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Book Marks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>